// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> Snapshots should match snapshot 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  row-gap: 16px;
}

.emotion-1 {
  font-family: "Roboto",sans-serif;
  font-size: 18px;
  font-weight: 400;
  line-height: 1.5;
}

.emotion-2 {
  width: 100%;
  height: 50px;
  background-color: var(--theme-ui-colors-background);
}

.emotion-3 {
  font-family: "Roboto",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  width: inherit;
  height: inherit;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 26px;
  padding-right: 32px;
  color: var(--theme-ui-colors-primary);
  border: 2px solid;
  border-color: var(--theme-ui-colors-gray);
}

.emotion-3:placeholder-shown {
  color: var(--theme-ui-colors-gray);
}

<div>
  <div
    class="emotion-0"
  >
    <label
      class="emotion-1"
    >
      Foo
    </label>
    <div
      class="emotion-2"
    >
      <input
        class="emotion-3"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<TextField /> Snapshots should match snapshot with multiline prop 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  row-gap: 16px;
}

.emotion-1 {
  font-family: "Roboto",sans-serif;
  font-size: 18px;
  font-weight: 400;
  line-height: 1.5;
}

.emotion-2 {
  width: 100%;
  height: 174px;
  background-color: var(--theme-ui-colors-background);
}

.emotion-3 {
  font-family: "Roboto",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  width: inherit;
  height: inherit;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 26px;
  padding-right: 32px;
  color: var(--theme-ui-colors-primary);
  border: 2px solid;
  border-color: var(--theme-ui-colors-gray);
}

.emotion-3:placeholder-shown {
  color: var(--theme-ui-colors-gray);
}

<div>
  <div
    class="emotion-0"
  >
    <label
      class="emotion-1"
    >
      Foo
    </label>
    <div
      class="emotion-2"
    >
      <textarea
        class="emotion-3"
      />
    </div>
  </div>
</div>
`;
